--- a/index.html
+++ b/index.html
@@ -5,8 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        table{
+            border-collapse: collapse;
+            border: 1px solid #999;
+            box-shadow: 0 0 10px #ccc;
+        }
+        td{
+            padding: 10px 20px;
+            border: 1px solid skyblue;
+        }
+    </style>
 </head>
 <body>
-    HIHI
+    <h1>HI</h1>
+    <table>
+        <tr>
+            <td>HI</td>
+            <td>HI</td>
+            <td>HI</td>
+        </tr>
+        <tr>
+            <td>HI</td>
+            <td>HI</td>
+            <td>HI</td>
+        </tr>
+        <tr>
+            <td>HI</td>
+            <td>HI</td>
+            <td>HI</td>
+        </tr>
+    </table>
 </body>
 </html>
